--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "db:studio": "npx drizzle-kit studio",
-    "db:push": "npx drizzle-kit push"
+    "db:push": "npx drizzle-kit push",
+    "db:drop": "drizzle-kit drop --out=.drizzle --schema=./database/schema.ts"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.0.2",
