--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.36.1",
+    "framer-motion": "^11.11.17",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "react": "^18",
