--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "drizzle-orm": "^0.36.1",
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.453.0",
-    "next": "14.2.15",
+    "next": "^15.0.3",
     "react": "^18",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
