--- a/package.json
+++ b/package.json
@@ -12,30 +12,31 @@
     "db:seed": "tsx ./seed/seed.ts"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.0.2",
-    "@neondatabase/serverless": "^0.10.3",
+    "@clerk/nextjs": "^5.7.1",
+    "@neondatabase/serverless": "^0.10.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.36.1",
-    "framer-motion": "^11.11.17",
-    "lucide-react": "^0.453.0",
-    "next": "^15.0.3",
+    "drizzle-orm": "^0.35.3",
+    "framer-motion": "^11.12.0",
+    "lucide-react": "^0.447.0",
+    "next": "14.2.14",
+    "next-themes": "^0.4.3",
     "react": "^18",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
-    "tailwind-merge": "^2.5.4",
+    "shadcn": "^2.1.6",
+    "sonner": "^1.7.0",
+    "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "drizzle-kit": "^0.28.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.15",
+    "drizzle-kit": "^0.26.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.19.2",
