--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.35.3",
     "framer-motion": "^11.12.0",
+    "keen-slider": "^6.8.6",
     "lucide-react": "^0.447.0",
     "next": "14.2.14",
     "next-themes": "^0.4.3",
