--- a/package.json
+++ b/package.json
@@ -15,22 +15,25 @@
     "@clerk/nextjs": "^5.7.1",
     "@neondatabase/serverless": "^0.10.1",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.35.3",
+    "express": "^4.21.1",
     "framer-motion": "^11.12.0",
     "lucide-react": "^0.447.0",
     "next": "14.2.14",
-    "next-themes": "^0.4.3",
+    "next-themes": "^0.4.4",
     "react": "^18",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
     "shadcn": "^2.1.6",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.3",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
