--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^18",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
+    "react-icons": "^5.4.0",
     "shadcn": "^2.1.6",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.3",
