--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
+    "react-use": "^17.6.0",
     "shadcn": "^2.1.6",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.3",
