--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "@clerk/nextjs": "^5.7.1",
     "@neondatabase/serverless": "^0.10.1",
+    "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@tsparticles/confetti": "^3.7.1",
     "@tsparticles/react": "^3.0.0",
