--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "lucide-react": "^0.447.0",
     "next": "14.2.14",
     "next-themes": "^0.4.4",
+    "ra-data-simple-rest": "^5.4.3",
     "react": "^18",
+    "react-admin": "^5.4.3",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
