--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@clerk/nextjs": "^5.7.1",
     "@hookform/resolvers": "^3.9.1",
     "@neondatabase/serverless": "^0.10.1",
+    "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.2",
