--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@tanstack/react-query": "^5.62.16",
     "@tsparticles/confetti": "^3.7.1",
     "@tsparticles/react": "^3.0.0",
     "axios": "^1.7.9",
